--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -14,5 +14,5 @@ $nav-4: #1375b8;
 }
 
 body {
-  overflow-x: hidden;
+  // overflow-x: hidden;
 }
