--- a/src/styles/_main-content.scss
+++ b/src/styles/_main-content.scss
@@ -25,6 +25,15 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  text-decoration: none;
+  &:hover,
+  &:active,
+  &:focus,
+  &:visited {
+    span {
+      color: $nav-1;
+    }
+  }
   span {
     font-size: 40px;
     color: $icons;
@@ -75,6 +84,15 @@
         display: inline-block;
       }
     }
+    a:hover,
+    a:active,
+    a:focus,
+    a:visited {
+      button {
+        background: $nav-1;
+        color: white;
+      }
+    }
     button {
       float: right;
       margin-top: 30px;
@@ -88,6 +106,11 @@
       font-size: 11px;
       padding-left: 2px;
       border-radius: 4px;
+      &:hover,
+      &:active,
+      &:focus,
+      &:visted {
+      }
       @media (min-width: 480px) {
         align-self: flex-end;
         margin-top: 0;
