--- a/src/styles/_slider.scss
+++ b/src/styles/_slider.scss
@@ -46,7 +46,7 @@
 
 .text-slider {
   display: flex;
-  width: 100vw;
+  width: 100%;
   justify-content: space-between;
   align-items: center;
   padding-left: 6px;
